refactor: google extract method